// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField wrapper component handles invalid dates day and year are not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue=""
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue={3}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue=""
/>
`;

exports[`DateField wrapper component handles invalid dates day is a leap day but not a leap year 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue={29}
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue={2}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue={2019}
/>
`;

exports[`DateField wrapper component handles invalid dates day is invalid for month and year 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue={73}
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue={4}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue={2019}
/>
`;

exports[`DateField wrapper component handles invalid dates day is not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue=""
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue={3}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue={2000}
/>
`;

exports[`DateField wrapper component handles invalid dates empty date 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue=""
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue=""
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue=""
/>
`;

exports[`DateField wrapper component handles invalid dates month and day are not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue=""
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue=""
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue={2000}
/>
`;

exports[`DateField wrapper component handles invalid dates month and year are not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue={3}
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue=""
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue=""
/>
`;

exports[`DateField wrapper component handles invalid dates month is not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue={4}
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue=""
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue={2000}
/>
`;

exports[`DateField wrapper component handles invalid dates month is out of range 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue={4}
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue={13}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue={2000}
/>
`;

exports[`DateField wrapper component handles invalid dates year is 3 digits 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue={3}
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue={3}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue={200}
/>
`;

exports[`DateField wrapper component handles invalid dates year is 5 digits 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue={3}
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue={3}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue={20000}
/>
`;

exports[`DateField wrapper component handles invalid dates year is not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue={3}
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue={3}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue=""
/>
`;

exports[`DateField wrapper component passes other props along to design system component 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="THE DAY"
  dayName="day"
  dayValue={17}
  errorMessage={Array []}
  errorPlacement="bottom"
  hint=""
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue={9}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue={1944}
/>
`;

exports[`DateField wrapper component renders properly with defaults 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  dayValue={6}
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  monthValue={6}
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
  yearValue={1944}
/>
`;
